# Sleek-app

./: Anchor.toml  README.md  package-lock.json  package.json
app/tabs/: account.tsx  home.tsx  rewards.tsx  sleek.tsx
programs/sleek/: Cargo.toml
programs/sleek/src/: lib.rs
scripts/: deploy.ts
src/hooks/: useSubscriptionPayment.ts  useWallet.ts
src/services/: subscriptionService.ts
tests/: sleek.test.ts
