[package]
name = "sleek"
version = "0.1.0"
description = "Sleek subscription management with BONK cashback rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sleek"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0" 